--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,25 @@
   display: flex;
   justify-content: space-between;
 }
+
+.play{
+  background: #ff5967;
+  border: 1px solid #ff5967;
+  box-shadow: 0 1px 2px rgb(15 15 15 / 10%);
+  color: #FFFFFF;
+  font-size: 14px;
+  line-height: 1;
+  padding-left: 12px;
+  padding-right: 12px;
+  font-weight: 500;
+  height: 20px;
+  border-radius: 10%
+}
+
+body{
+  margin:3rem;
+}
+
+.image{
+  border-radius:5%;
+}
